logic/src/parse/snapshots/logic__parse__ui__invalid_brackets3-3.snap
---
source: logic/src/parse/ui.rs
expression: string

---
error: Mismatching brackets!
  ┌─ file:1:5
  │
1 │ (((((((()))
  │     ^ This bracket is opened, but it is never closed


